# feed-application

./: .gitignore  manage.py  pyproject.toml  run_tests.sh
account/: admin.py  models.py
account/migrations/: 0001_initial.py
api/account/: serializers.py  views.py
apps/account/: admin.py  models.py  services.py  utils.py
apps/account/migrations/: 0001_initial.py  0002_userconfirmcode.py  0003_rename_confirm_code_userconfirmcode_code_and_more.py
apps/api/account/: serializers.py  views.py
apps/core/: email_utils.py
config/: asgi.py  env.py  settings.py  urls.py  wsgi.py
config/settings/: base.py  local.py  unittest.py
services/: account_services.py
tests/account/: test_services.py  test_views.py
